--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -37,7 +37,17 @@
                   <div class="form-group">
                     <button class="btn btn-primary submit-btn btn-block"
                             [disabled] = "loginForm.invalid"
-                            type="submit">Login</button>
+                            type="submit"
+                            *ngIf="!cargando">
+                      Login
+                    </button>
+                    <button class="btn btn-primary submit-btn btn-block"
+                            [disabled] = "true"
+                            type="button"
+                            *ngIf="cargando">
+                      <i class="fa fa-spin fa-sync"></i>
+                      Espere...
+                    </button>
                   </div>
                   
                   
